@@ -1,6 +1,7 @@
 postgresql-common (139) UNRELEASED-experimental; urgency=low
 
   * testsuite: unshare needs "--" or else it eats our options.
+  * testsute 005_PgCommon: Do the ipv4 tests before the ipv6 ones.
 
  -- Christoph Berg <myon@debian.org>  Mon, 17 Dec 2012 12:19:31 +0100
 
